--- a/bartholemew/static/css/bartholemew.css
+++ b/bartholemew/static/css/bartholemew.css
@@ -27,6 +27,28 @@
 .tiptext {
     font-size: calc(8px + (18 - 8) * ((100vw - 300px) / 1620));
 }
+
+#loading-overlay {
+	display: none;
+	position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.85);
+    z-index: 9999;
+}
+.loading-image-div {
+	display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    height: 100%;
+}
+.loading-img {
+    opacity: 1;
+}
+
 @media screen and (orientation: landscape){
     .chatboxdiv, .chatsummaryhead {
         padding-top: 5vh;
@@ -47,6 +69,9 @@
     .chatbox-container {
         width: 75vw;
     }
+    .loading-img {
+        height: 70vh;
+    }
 }
 @media screen and (orientation: portrait){
     .chatbox {
@@ -61,6 +86,9 @@
     }
     .chatbox-container {
         width: 95vw;
+    }
+    .loading-img {
+        width: 70vw;
     }
 }
 @media (min-width: 767px) {
