Build: changed corse input to select on product_admin.html

--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -126,7 +126,7 @@
                                             {% if basket_total.total_price__sum != None  %}
                                                 <div class="row">
                                                     <div class="col-6">
-                                                        <a class="delete-button border-solid masthead-button btn btn-primary js-scroll-trigger" id="empty-basket"
+                                                        <a class="empty-button border-solid masthead-button btn btn-primary js-scroll-trigger" id="empty-basket"
                                                             href="{% url 'empty_basket' %}">
                                                             <i class="fas fa-trash-alt" aria-hidden="true"></i> empty basket</a>
                                                     </div>
