Enhance: added more bartholemew.html validation

--- a/bartholemew/templates/bartholemew/bartholemew_output.html
+++ b/bartholemew/templates/bartholemew/bartholemew_output.html
@@ -17,7 +17,8 @@
             <div class="row justify-content-center no-gutters">
                 <div class="col-xl-12">
                     <h1 class="product-text-one mx-auto text-uppercase text-center flex-margin-b text-blue">Bartholemew Recommends</h1>
-                    <p class="product-text-three mx-auto text-center flex-margin-b text-blue">This is the menu I have come up with for your {{ bartholemew_event_type }}</p>
+                    <p class="product-text-three mx-auto text-center flex-margin-b text-blue">This is the menu I have come up with for your {{ bartholemew_event_type }}.</p>
+                    <p class="product-text-three mx-auto text-center flex-margin-b text-blue">I've added them to your basket - you can still make any last minute changes (or even try again!) before you buy.</p>
                 </div>
                 <div class="col-xl-6">
                     <img class="img-fluid image-80" src="{{ MEDIA_URL }}assets/img/bartholemew.jpg" alt="robochef image" />
