--- a/bartholemew/static/css/bartholemew.css
+++ b/bartholemew/static/css/bartholemew.css
@@ -27,9 +27,11 @@
 .tiptext {
     font-size: calc(8px + (18 - 8) * ((100vw - 300px) / 1620));
 }
+
 #buildimgbox {
-    width: 100vw;
+    width: 95vw;
 }
+
 @media screen and (orientation: landscape){
     .chatboxdiv, .chatsummaryhead {
         padding-top: 5vh;
@@ -50,6 +52,13 @@
     .chatbox-container {
         width: 75vw;
     }
+    .build-image {
+        width: 100%;
+    }
+    .buildimgdiv {
+        flex: 0 0 50%;
+        max-width: 50%;
+    }
 }
 @media screen and (orientation: portrait){
     .chatbox {
@@ -64,6 +73,13 @@
     }
     .chatbox-container {
         width: 95vw;
+    }
+    .build-image {
+        width: 90%;
+    }
+    .buildimgdiv {
+        flex: 0 0 100%;
+        max-width: 100%;
     }
 }
 @media (min-width: 767px) {
