--- a/bartholemew/templates/bartholemew/bartholemew.html
+++ b/bartholemew/templates/bartholemew/bartholemew.html
@@ -18,8 +18,12 @@
     <body onload="createCookie()"></body>
     <section class="products-section">
         <h1 class="product-text-one mx-auto text-uppercase text-center flex-margin-b text-blue">Build-a-Buffet</h1>
-        <div class="hidden buildimgbox mb-1 px-0 mx-lg-5 px-lg-5 row align-center" id="buildimgbox">
-            <img class="build-image mx-auto col-12" src="{{ MEDIA_URL }}assets/img/bartholemew-build.jpg" alt="robochef image" />
+        <div class="hidden mb-1 px-0 row" id="buildimgbox">
+            <div class="col-3">
+            </div>
+            <div class="buildimgdiv">
+                <img class="build-image" src="{{ MEDIA_URL }}assets/img/bartholemew-build.jpg" alt="robochef image" />
+            </div>
         </div>
         <div class="chatbox-container row px-3 mx-auto" id="chatboxcont">
             <div class="chatboxdiv">
