--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10741,4 +10741,7 @@ body {
     .product-search-input {
         width:90%;
     }
+    .checkout-button, .empty-button {
+        padding: 2vh 2vw !important;
+    }
 }
