Code Refactoring: bartholemew.py

--- a/bartholemew/templates/bartholemew/bartholemew.html
+++ b/bartholemew/templates/bartholemew/bartholemew.html
@@ -19,7 +19,7 @@
     <section class="products-section">
         <h1 class="product-text-one mx-auto text-uppercase text-center flex-margin-b text-blue">Build-a-Buffet</h1>
         <div class="hidden mb-1 px-0 row" id="buildimgbox">
-            <div class="col-3">
+            <div class="buildimgdivsml">
             </div>
             <div class="buildimgdiv">
                 <img class="build-image" src="{{ MEDIA_URL }}assets/img/bartholemew-build.jpg" alt="robochef image" />
