--- a/bartholemew/static/css/bartholemew.css
+++ b/bartholemew/static/css/bartholemew.css
@@ -59,6 +59,10 @@
         flex: 0 0 50%;
         max-width: 50%;
     }
+    .buildimgdivsml {
+        flex: 0 0 25%;
+        max-width: 25%;
+    }
 }
 @media screen and (orientation: portrait){
     .chatbox {
