Code Refactoring: checkout/views.py

--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -75,28 +75,34 @@
                                                 {% if option.category|slugify == basket.category|slugify %}
                                                     With the option:
                                                 {% endif %}
-                                                {% if basket.option == "selected-one" and option.category|slugify == basket.category|slugify %}
-                                                    {% for option in options %}
+                                            {% endfor %}
+                                            {% if basket.option == "selected-one" %}
+                                                {% for option in options %}
+                                                    {% if option.category|slugify == basket.category|slugify %}
                                                         <span class="text-blue product-text-two mb-2 bold">
                                                             {{ option.option1.title }}
                                                         </span>
-                                                    {% endfor %}
-                                                {% endif %}
-                                                {% if basket.option == "selected-two" and option.category|slugify == basket.category|slugify %}
-                                                    {% for option in options %}
+                                                    {% endif %}
+                                                {% endfor %}
+                                            {% endif %}
+                                            {% if basket.option == "selected-two" %}
+                                                {% for option in options %}
+                                                    {% if option.category|slugify == basket.category|slugify %}
                                                         <span class="text-blue product-text-two mb-2 bold">
                                                             {{ option.option2.title }}
                                                         </span>
-                                                    {% endfor %}
-                                                {% endif %}
-                                                {% if basket.option == "selected-three" and option.category|slugify == basket.category|slugify %}
-                                                    {% for option in options %}
+                                                    {% endif %}
+                                                {% endfor %}
+                                            {% endif %}
+                                            {% if basket.option == "selected-three" %}
+                                                {% for option in options %}
+                                                    {% if option.category|slugify == basket.category|slugify %}
                                                         <span class="text-blue product-text-two mb-2 bold">
                                                             {{ option.option3.title }}
                                                         </span>
-                                                    {% endfor %}
-                                                {% endif %}
-                                            {% endfor %}
+                                                    {% endif %}
+                                                {% endfor %}
+                                            {% endif %}
                                         </div>
                                         <div class="text-blue text-xs mb-4">Number of servings:
                                             <span id="servings" class="text-blue product-text-two mb-2 bold">
